<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.zrc.dailylife.view.HActionBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:function="button_left|text_title"
        app:text_title="@string/account_manager"/>

    <cn.zrc.dailylife.view.ItemView
        android:id="@+id/modify_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:arrowvisiable="true"
        app:cutlinevisiable="true"
        app:title="@string/modify_pwd"/>

    <cn.zrc.dailylife.view.ItemView
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:arrowvisiable="true"
        app:cutlinevisiable="true"
        app:title="@string/contact_us"/>

    <TextView
        android:id="@+id/exit_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/common_background_white"
        android:gravity="center"
        android:text="@string/exit_account"
        android:textColor="@color/green"
        android:textSize="18sp"/>

</LinearLayout>
